// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Platform No platform provided 1`] = `
<div
  class=""
>
  <span
    data-testid="real"
  />
</div>
`;

exports[`Platform scheduled !== real & cancelled 1`] = `
<div
  class="Platform-cancelled Platform-changed"
>
  <span
    data-testid="real"
  >
    1
  </span>
  <span
    class="Platform-changedWrapper"
    data-testid="scheduled"
  >
    (
    2
    )
  </span>
</div>
`;

exports[`Platform scheduled !== real 1`] = `
<div
  class="Platform-changed"
>
  <span
    data-testid="real"
  >
    1
  </span>
  <span
    class="Platform-changedWrapper"
    data-testid="scheduled"
  >
    (
    2
    )
  </span>
</div>
`;

exports[`Platform scheduled === real & cancelled 1`] = `
<div
  class="Platform-cancelled"
>
  <span
    data-testid="real"
  >
    1
  </span>
</div>
`;

exports[`Platform scheduled === real 1`] = `
<div
  class=""
>
  <span
    data-testid="real"
  >
    1
  </span>
</div>
`;
